added more stuff

--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
-  <head>
-
+  <link>
+    <link>https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css</link>
+    <title>A new title</title>
   </head>
   <body>
-
+    <!--We'll be adding more content later-->
+    This apple green smoothie is so easy to make. It can be a very healthy breakfast or a tasty snack.  It is made with all alkalizing foods.
   </body>
 </html>
